# WxMap

./: .gitignore  pyproject.toml
lib/: config.py  evaluator.py  plotservice.py  request.py  wxservice.py
lib/mygrads/: __init__.py  gacm.py  galab.py  gaya.py  simplekml.py
share/themes/anomaly_merra2/: makeRGB.py
share/themes/anomaly_merra2/src/: ltm_wspd.py  meanspeed.py
utils/: wxcompile.py
wxmap/: __main__.py  get_cmap.py  makeCMAP.py  wxcompile.py  wxd.py  wxlist.py  wxmap.py
wxmap/lib/: config.py  dataservice.py  evaluator.py  gdsvml.py  gradsdataservice.py  gradsmapservice.py  interface.py  mapservice.py  mydatetime.py  plot.py  plotservice.py  request.py  taskmanager.py  toolkit.py  wxservice.py
wxmap/lib/mygrads/: gacore.py  gahandle.py  galab.py  ganum.py  numtypes.py
