[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WxMap"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
  "basemap",
  "matplotlib",
  "netcdf4",
  "numpy",
  "pillow",
  "pyyaml",
  "scipy"
  # "jarray",
  # "myutils",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
WxMap = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
netcdf4 = ">=1.7.1,<1.8"
ipython = ">=8.26.0,<8.27"
basemap = ">=1.4.1,<1.5"
