[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WxMap"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
  "basemap",
  "matplotlib",
  "netcdf4",
  "numpy",
  "pillow",
  "pyyaml",
  "scipy"
  # "jarray",
  # "myutils",
]

[project.scripts]
get_cmap = "wxmap.get_cmap:main"
makeCMAP = "wxmap.makeCMAP:main"
wxcompile = "wxmap.wxcompile:main"
wxd = "wxmap.wxd:main"
wxlist = "wxmap.wxlist:main"
wxmap = "wxmap.wxmap:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
WxMap = { path = ".", editable = true }

[tool.pixi.tasks]
get_grads = { cmd = "curl -L https://sourceforge.net/projects/opengrads/files/grads2/2.2.1.oga.1/Linux%20%2864%20Bits%29/opengrads-2.2.1.oga.1-bundle-x86_64-pc-linux-gnu-glibc_2.17.tar.gz/download | tar -xz", outputs = ["opengrads-2.2.1.oga.1/README"] }

[tool.pixi.dependencies]
netcdf4 = ">=1.7.1,<1.8"
ipython = ">=8.26.0,<8.27"
basemap = ">=1.4.1,<1.5"

[tool.pixi.activation]
env = {PATH = "$PATH:$PWD/opengrads-2.2.1.oga.1/Contents/"}
# scripts = ["env_setup.sh"]
